Tests/Fail/Test013.ML
(* This is invalid but previously worked. *)
let fun f x y = x+y in f 1 2; f 2.0 3.0; "WRONG" end;
